--- a/registry.yaml
+++ b/registry.yaml
@@ -45,3 +45,12 @@
     evm: "0xd10Af01D4f617974726eeeC717FBC642df69CB58"
     flow: "0x86c0ce142ca23b42"
     
+-
+  name: Immutable5 - Next Generation Platform
+  github:
+    - ImmutableType
+  repos:
+    - https://github.com/ImmutableType/immutable5
+  wallets:
+    evm: "0x9402F9f20b4a27b55B1cC6cf015D98f764814fb2"
+    flow: "0x00000000000000000000000228B74E66CBD624Fc"
