Add OathLock configuration to registry.yaml

--- a/registry.yaml
+++ b/registry.yaml
@@ -44,7 +44,6 @@
     # Your wallets to accept Flow Rewards
     evm: "0xd10Af01D4f617974726eeeC717FBC642df69CB58"
     flow: "0x86c0ce142ca23b42"
-    
 -
   name: Immutable5 - Next Generation Platform
   github:
@@ -54,3 +53,14 @@
   wallets:
     evm: "0x9402F9f20b4a27b55B1cC6cf015D98f764814fb2"
     flow: "0x00000000000000000000000228B74E66CBD624Fc"
+-
+  name: OathLock
+  github:
+    - rtree
+    - hanabiradake
+    - metaproxyco
+  repos:
+    - https://github.com/rtree/OathLock
+  wallets:
+    evm: "0x000000000000000000000002119816AD33a31444"
+    flow: "0xabefd453b52dd787"
