--- a/.github/workflows/validate-registry.yml
+++ b/.github/workflows/validate-registry.yml
@@ -1,7 +1,9 @@
 name: Validate Registry PR
 
 on:
-  pull_request:
+  pull_request_target:
+    branches:
+      - 'main'
     paths:
       - "registry.yaml"
     types: [opened, synchronize, reopened]
