--- a/registry.yaml
+++ b/registry.yaml
@@ -52,7 +52,7 @@
     - https://github.com/ImmutableType/immutable5
   wallets:
     evm: "0x9402F9f20b4a27b55B1cC6cf015D98f764814fb2"
-    flow: "0x00000000000000000000000228B74E66CBD624Fc"
+    flow: "0x0000000000000001"
 -
   name: OathLock
   github:
