--- a/registry.yaml
+++ b/registry.yaml
@@ -146,3 +146,15 @@
     evm: "0x0000000000000000000000020d67a3C4174e27A3"
     flow: "0xaec929f96ea89ae4"
 -
+-
+  name: Magix
+  github:
+    - Borngreat Ikwutah (https://github.com/borngreat-ikwutah)
+  repos:
+    - https://github.com/borngreat-ikwutah/magix
+  wallets:
+    # Your team's wallets to accept Flow Rewards
+    evm: "0x9597d6346946D55C5D4004269c79945eB8BAC4b7"
+    flow: "0xc0ad9a569b0fc413"
+   x:
+    - @borngreatik23
