--- a/registry.yaml
+++ b/registry.yaml
@@ -145,4 +145,14 @@
   wallets:
     evm: "0x0000000000000000000000020d67a3C4174e27A3"
     flow: "0xaec929f96ea89ae4"
--
+--
+  name: Magix
+  github:
+    - borngreat-ikwutah
+  repos:
+    - https://github.com/borngreat-ikwutah/magix
+  wallets: # Optional, Your wallets to accept Flow Rewards
+    evm: "0x9597d6346946D55C5D4004269c79945eB8BAC4b7"
+    flow: "0xc0ad9a569b0fc413"
+  x: # Optional, Your team's social handles
+    - borngreatik23
