Add Curio Storage to ReWTF registry

--- a/registry.yaml
+++ b/registry.yaml
@@ -23,6 +23,20 @@
 # ------ End - Template -----
 # >>>>>>> Developers' registry <<<<<<<<
 -
+  name: Curio Storage
+  github:
+    - LexLuthr
+    - magik6k
+    - snadrus
+    - Reiers
+  repos:
+    - https://github.com/filecoin-project/curio
+  wallets:
+    evm: "0x876EE609A0556559F28a8159972cE6222A2e98aE"
+    flow: "0xb8378d0de0932d58"
+  x:
+    - curiostorage
+-
   name: Fixes Lab
   github:
     - btspoony
