--- a/registry.yaml
+++ b/registry.yaml
@@ -1,5 +1,5 @@
 # ------ Start - Template -----
-# Copy the following structure as your registration information!
+# Copy the following structure as your registration information!!
 -
   name: Team Name(Displayed in Leaderboard)
   github:
