--- a/registry.yaml
+++ b/registry.yaml
@@ -244,4 +244,4 @@
     - https://github.com/KintaGen/kintagen
   wallets:
     evm: "0x895708Fe6Fb1309Dc9e76Dbf88968691E82862b8"
-    flow: "0x3c16354a3859c81b"
+    flow: "0x4768dd49d386dd15"
