--- a/registry.yaml
+++ b/registry.yaml
@@ -1,272 +1,10 @@
-# ------ Start - Template -----
-# Copy the following structure as your registration information!!
 -
-  name: Team Name(Displayed in Leaderboard)
+  name: Flow-dev-starter
   github:
-    # Your team members' Github usernames, for tracking your PR status to onflow
-    - username1
-    - username2
+    - Izi-27
+    - Matthew-123-dev
   repos:
-    # Your repositories, all commits to these repos will be tracked. Only repos that meet
-    # either of the two following requirements can be included and accepted:
-    # 1. "Built on Flow": You need to clearly state in the README.md that it is built on Flow, and
-    #    if there are any contracts, list the contract addresses deployed on Flow.
-    # 2. With Flow components: Cadence Language, or with `@onflow/fcl` or `@onflow/kit`(in package.json), or using
-    #    go sdk(url in go.mod), or with Flow public EVM endpoints set(in Solidity configure files).
-    - https://github.com/your/repo_1
-    - https://github.com/your/repo_2
-  wallets: # Optional, Your wallets to accept Flow Rewards
-    evm: "0x0000000000000000000000000000000000000000"
-    flow: "0x0000000000000001"
-  x: # Optional, Your team's social handles
-    - your_x_handle
-# ------ End - Template -----
-# >>>>>>> Developers' registry <<<<<<<<
--
-  name: Fixes Lab
-  github:
-    - btspoony
-  repos:
-    - https://github.com/fixes-world/token-list
-    - https://github.com/fixes-world/fixes
+    - https://github.com/Izi-27/Flow-dev-starter
   wallets:
-    evm: "0x000000000000000000000002E44fBFBd00395DE5"
-    flow: "0xa2de93114bae3e73"
-  x:
-    - btspoony
--
-  name: Deadgrid
-  github:
-    - Aliserag
-  repos:
-    - https://github.com/Aliserag/deadgrid
-  wallets:
-    # Your wallets to accept Flow Rewards
-    evm: "0xd10Af01D4f617974726eeeC717FBC642df69CB58"
-    flow: "0x86c0ce142ca23b42"
--
-  name: ImmutableType
-  github:
-    - ImmutableType
-  repos:
-    - https://github.com/ImmutableType/immutable5
-  wallets:
-    evm: "0x9402F9f20b4a27b55B1cC6cf015D98f764814fb2"
-    flow: "0x0000000000000001"
--
-  name: OathLock
-  github:
-    - rtree
-    - hanabiradake
-    - metaproxyco
-  repos:
-    - https://github.com/rtree/OathLock
-  wallets:
-    evm: "0x000000000000000000000002119816AD33a31444"
-    flow: "0xabefd453b52dd787"
--
-  name: FlowWager
-  github:
-    # Your team members' GitHub usernames for tracking PR status to onflow
-    - AltcoinDaddy
-    - borngreat-ikwutah
-  repos:
-    # Your team's repositories - all commits to these repos will be tracked
-    - https://github.com/AltcoinDaddy/flow-wager
-  wallets:
-    # Your team's wallets to accept Flow Rewards
-    evm: "0x00000000000000000000000212aB5157de5cB288"
-    flow: "0xb7745acb2b2af47e"
-- 
-  name: Rivals
-  github:
-    - jiyuu-jin
-    - chris13524
-  repos:
-    - https://github.com/jiyuu-jin/Rivals
-  wallets:
-    evm: "0xbD8C79740Bf625F5054E86a2CE4e73879382f923"
-    flow: "0xb37ebf49ac9cc10c"
-- 
-  name: Nocena
-  github:
-    - louskac
-    - Nocena
-  repos:
-    - https://github.com/Nocena/app.nocena
-  wallets:
-    evm: "0x000000000000000000000002717316C4f6837628"
-    flow: "0x78821ad8ca4ed8dd"
--
-  name: Letter Link Tiles
-  github:
-    - ysongh
-  repos:
-    - https://github.com/ysongh/LetterLinkTiles
-  wallets:
-    evm: "0xC7677c5D01b0D78dB5bFee1071e324dA0F9bC944"
-  x:
-    - ysongweb3
--
-  name: OCB
-  github:
-    - DappCoderr
-  repos:
-    - https://github.com/DappCoderr/OCB
-  wallets:
-    evm: "0x000000000000000000000002d7e48aba1f020b52"
-    flow: "0xe35f688520e4a2c3"
-  x:
-    - dappcoder_
--
-  name: aiSports
-  github:
-    - ccarnicle
-  repos:
-    - https://github.com/ccarnicle/cascade_scaffold
-    - https://github.com/ccarnicle/flowActionsTesting
-  wallets:
-    evm: "0x000000000000000000000002f198406d0594C15B"
-    flow: "0x9db94c9564243ba7"
--
-  name: TroveFi
-  github:
-    - PhatDot1
-  repos:
-    - https://github.com/TroveFi/all-playground
-  wallets:
-    evm: "0xbaD4374FeB7ec757027CF2186B6eb6f32412f723"
-    flow: "0x79f5b5b0f95a160b"
--
-  name: tunnel
-  github:
-    - AqilJaafree
-  repos:
-    - https://github.com/AqilJaafree/Tunnel
-  wallets:
-    evm: "0x0000000000000000000000020d67a3C4174e27A3"
-    flow: "0xaec929f96ea89ae4"
--
-  name: JetrPay
-  github:
-    - ayomisco
-  repos:
-    - https://github.com/Ayomisco/jetrpay
-  wallets:
-    evm: "0x00000000000000000000000277E9f18E5912f4cA"
-    flow: "0xdc7abe65491f10be"
-  x:
-    - ayomisco_s 
--
-  name: Curio Storage
-  github:
-    - LexLuthr
-    - magik6k
-    - snadrus
-    - Reiers
-  repos:
-    - https://github.com/filecoin-project/curio
-  wallets:
-    evm: "0x876EE609A0556559F28a8159972cE6222A2e98aE"
-    flow: "0xb8378d0de0932d58"
-  x:
-    - curiostorage
--
-  name: Magix
-  github:
-    - borngreat-ikwutah
-  repos:
-    - https://github.com/borngreat-ikwutah/magix
-  wallets: # Optional, Your wallets to accept Flow Rewards
-    evm: "0x9597d6346946D55C5D4004269c79945eB8BAC4b7"
-    flow: "0xc0ad9a569b0fc413"
-  x: # Optional, Your team's social handles
-    - borngreatik23
--
-  name: Token Tuner
-  github:
-    - thisispalash
-  repos:
-    - https://github.com/thisispalash/tt-monorepo
-  wallets:
-    evm: "0xD8aE2aCF05660db350A56d5721f46a73ED64f657"
-  x:
-    - theprimefibber
--
-  name: Flunks
-  github:
-    - flunkscommunity
-  repos:
-    - https://github.com/flunkscommunity/flunks-site
-  wallets:
-    evm: "0x0000000000000000000000024DfF20BeDFD6C48B"
-    flow: "0xe327216d843357f1"
-  x: 
-    - flunks_nft
--
-  name: Angus
-  github:
-    - agyn-ub
-  repos:
-    - https://github.com/agyn-ub/ai_voice_calendar
-  wallets:
-    evm: "0x7E2067C97fE54481a1E54d907abAfB6aD713D57b"
-    flow: "0xa620a02c4cc2d20d"
-  x:
-    - 0xAngusBro
--
-
-  name: Pandit
-  github:
-    - panditdhamdhere
-  repos:
-    - https://github.com/panditdhamdhere/FlowSwap
-  wallets:
-    evm: "0x1E78b3F3550889e90EcE152ab6bbCb8d9E7Dd221"
-    flow: "0x03b3bd382dee2ab7"
-  x:
-    - panditdhamdhere
--
-  name: AechaEopteryX
-  github:
-    - juSt-jeLLy
-  repos:
-    - https://github.com/juSt-jeLLy/FlowBet
-  wallets:
-    evm: "0xE88ddC343052317480A204793426Be6319cfc700"
-    flow: "0x0a05302bacfd68b2"
--
-  name: Kintagen
-  github:
-    - MartelAxe
-    - henrique1837
-  repos:
-    - https://github.com/KintaGen/kintagen-api
-    - https://github.com/KintaGen/kintagen
-  wallets:
-    evm: "0x895708Fe6Fb1309Dc9e76Dbf88968691E82862b8"
-    flow: "0x4768dd49d386dd15"
--
-  name: Hariprasad
-  github:
-    - hprasadsakhare
-  repos:
-    - https://github.com/hprasadsakhare/ChargeShare
-  wallets:
-    evm: "0x000000000000000000000002c8bC18086cb1a1B8"
-    flow: "0xc4bd9158b8bb0256"
--
-  name: Drift
-  github:
-    - Pragyaa3
-  repos:
-    -  https://github.com/Pragyaa3/Lumina
-  wallets:
-    evm: "0x164Ee3445d773A10528fcC1c5DDDCbd947B1da9e"
-    flow: "0x5c5de1f068a11816"                          
-  x:
-    - Pragyaxh3  
-
-
-
-  
+    evm: "0x774A693E52e6882b10f739bB7b84b3F4438ADb4B"
+    flow: "0x9701b128fd2017f8"
