add team to registry

--- a/registry.yaml
+++ b/registry.yaml
@@ -266,7 +266,15 @@
     flow: "0x5c5de1f068a11816"                          
   x:
     - Pragyaxh3  
-
+-
+  name: roma marshall x flow
+  github:
+    - roma-marshall
+  repos:
+    - https://github.com/roma-marshall/primedice
+  wallets:
+    evm: "0x0000000000000000000000021E03c5f3E1c6d1b2"
+    flow: "0x711f9dfe2dbefc82"
 
 
   
