--- a/registry.yaml
+++ b/registry.yaml
@@ -92,6 +92,9 @@
   github:
     - louskac
     - Nocena
+    - cadenpiper
+    - matijamicunovic629
+    - wongsdev
   repos:
     - https://github.com/Nocena/app.nocena
   wallets:
