--- a/registry.yaml
+++ b/registry.yaml
@@ -313,8 +313,8 @@
   repos:
     - https://github.com/Timi16/Prognos
   wallets:
-    evm: 0x000000000000000000000002206f95Af1352D46C
-    flow: 0x0fa0eeb9864e32cc
+    evm: "0x000000000000000000000002206f95Af1352D46C"
+    flow:" 0x0fa0eeb9864e32cc"
   x:
     - Timicoding
   
