--- a/registry.yaml
+++ b/registry.yaml
@@ -339,3 +339,13 @@
     flow: "0x52cf9b3a77ad5764"
   x:
     - Pranavkumar6328 
+
+
+  name: Aura
+  github:
+    - luisawatkins
+  repos:
+    - https://github.com/luisawatkins/FlowGrow
+  wallets:
+    evm: "0xD64020553d18F3468A6800FAC1a0116E46BE6905"
+    flow: "0x3b53317a548a4015"
