--- a/registry.yaml
+++ b/registry.yaml
@@ -372,3 +372,13 @@
     flow: "0xa9a5c79434197e3c"
   x: 
     - ishbubbles1
+- name: Galerie
+  github:
+    - KyllianGenot
+    - edenbd1
+  repos:
+    - https://github.com/galerie-fi/galerie-frontend
+    - https://github.com/galerie-fi/galerie-smart-contracts
+  wallets:
+    evm: "0x00000000000000000000000215dB3fa5b4B738D8"
+    flow: "0xb6111c9812bcced8"
