--- a/registry.yaml
+++ b/registry.yaml
@@ -395,17 +395,20 @@
   x: 
     - wayBiggerr
 
--
-  name: Flow-dev-starter
+  -
+    name: Flow-dev-starter
     github:
       - Izi-27
       - SKAHLO1
     repos:
-      - https://github.com/Izi-27/Flow-dev-starter
+      - https://github.com/Izi-27/
+  Flow-dev-starter
     wallets:
-      evm: "0x774A693E52e6882b10f739bB7b84b3F4438ADb4B"
+      evm: "0x774A693E52e6882b10f7
+  39bB7b84b3F4438ADb4B"
       flow: "0x9701b128fd2017f8"
-    x: Adam_shelbie
+    x:
+      - Adam_shelbie
 
 -
   name: "Mighty Cats"
