--- a/registry.yaml
+++ b/registry.yaml
@@ -507,4 +507,4 @@
     evm: "0x3d6E4a6316d007daf5931942dff8D5934Da1e8cE"
     flow: "0x0000000000000001"
   x:
-    - @kartik_1218
+    - kartik_1218
