--- a/registry.yaml
+++ b/registry.yaml
@@ -411,9 +411,9 @@
 -
   name: "Mighty Cats"
   github:
-    - "devalexmunoz"
+    - devalexmunoz
   repos:
-    - "https://github.com/devalexmunoz/mightycats"
+    - https://github.com/devalexmunoz/mightycats
   wallets:
     evm: "0x00000000000000000000000276b73E9c8a508C23"
     flow: "0x8bb760cedaf845d8"
